added getExpandedPaths; cleanup expandedPaths after fullUpdate;